--- a/www/index.html
+++ b/www/index.html
@@ -32,7 +32,11 @@
 
 <script src="js/projectlist.js"></script>
 <script src="js/projectdetails.js"></script>
-
+<script type="text/javascript" src="phonegap.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript">
+    app.initialize();
+</script>
 </body>
 
 </html>
