--- a/www/index.html
+++ b/www/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <title>Employee Directory</title>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<meta charset="utf-8" />
+<meta name="format-detection" content="telephone=no" />
+<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
 <link rel="stylesheet" href="css/styles.css" />
 
@@ -23,7 +25,7 @@
 </div>
 
 <a id="next-page" href="."></a>
-
+<script type="text/javascript" src="phonegap.js"></script>
 <script src="js/jquery.min.js"></script>
 <script src="js/jqm.min.js"></script>
 <script src="js/waypoints.min.js"></script>
