--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+<link rel="stylesheet" href="css/jqm.css" />
 <link rel="stylesheet" href="css/styles.css" />
 
 </head>
@@ -25,8 +25,8 @@
 </div>
 
 <a id="next-page" href="."></a>
-<script type="text/javascript" src="phonegap.js"></script>
 <script src="js/jquery.min.js"></script>
+<script src="phonegap.js"></script>
 <script src="js/jqm.min.js"></script>
 <script src="js/waypoints.min.js"></script>
 <script src="js/waypoints-infinite.min.js"></script>
