--- a/www/projectdetails.html
+++ b/www/projectdetails.html
@@ -11,7 +11,7 @@
 		<h1>Project Details</h1>
 	</div>
 
-  <div data-role="content"> 
+  <div data-role="content" style="margin:0;padding:0"> 
 
   	<img style="margin:10px;margin-top:0px" id="projectPic"/>
 	<div id="projectDetails" style="background:white;padding:0;padding-left:10px;padding-right:5px">
