--- a/www/index.html
+++ b/www/index.html
@@ -5,8 +5,9 @@
 <meta charset="utf-8" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-<link rel="stylesheet" href="css/jqm.css" />
 <link rel="stylesheet" href="css/usgbc-min.css" />
+<link rel="stylesheet" href="css/jqm.css" />
+
 
 </head>
     
@@ -19,7 +20,7 @@
 	</div>
 
 	<div data-role="content">
-         <ul id="projectList" data-role="listview" data-filter="true"></ul>
+         <ul id="projectList" data-role="listview" data-filter="true" class="ui-listview-a"></ul>
     </div>		
 
 </div>
