--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,7 @@
 <script src="js/projectlist.js"></script>
 <script src="js/projectdetails.js"></script>
 <script src="phonegap.js"></script>
+<script src="jquery.unveil.js"></script>
 </body>
 
 </html>
