--- a/www/index.html
+++ b/www/index.html
@@ -30,10 +30,11 @@
 <script src="js/jqm.min.js"></script>
 <script src="js/waypoints.min.js"></script>
 <script src="js/waypoints-infinite.min.js"></script>
+<script src="js/unveil.min.js"></script>
 <script src="js/projectlist.js"></script>
 <script src="js/projectdetails.js"></script>
 <script src="phonegap.js"></script>
-<script src="jquery.unveil.js"></script>
+
 </body>
 
 </html>
