--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 
 <link rel="stylesheet" href="css/jqm.css" />
 <link rel="stylesheet" href="css/usgbc.min.css" />
+<style>.ui-page { -webkit-backface-visibility: hidden; }</style>
 
 </head>
     
