--- a/memberdetails.html
+++ b/memberdetails.html
@@ -5,16 +5,16 @@
     
 <body>
 
-<div id="detailsPage" data-role="page" data-add-back-btn="true" style="background:white">
+<div id="memberDetailsPage" data-role="page" data-add-back-btn="true" style="background:white">
 
 	<div data-role="header">
-		<h1>Project Details</h1>
+		<h1>Member Details</h1>
 	</div>
 
   <div data-role="content" style="margin:0;padding:0;"> 
 
-  	<div style="min-height:200px"><img style="margin:0px;margin-top:0px;margin-bottom:10px;" id="projectPic" src="img/loading.gif"/></div>
-	<div id="projectDetails" style="background:white;padding:0;padding-left:10px;padding-right:5px">
+  	<div style="min-height:200px"><img style="margin:0px;margin-top:0px;margin-bottom:10px;" id="memberPic" src="img/loading.gif"/></div>
+	<div id="memberDetails" style="background:white;padding:0;padding-left:10px;padding-right:5px">
 		<div style="min-height:60px">
 			<div style="margin-top:0;width:300px"><h4 style="margin-bottom:0;margin-top:0" id="name"></h4>
 				<span style="font-size:12px;" id="address"></span>
