--- a/www/index.html
+++ b/www/index.html
@@ -51,8 +51,8 @@
 	<div data-role="footer" data-position="fixed" class="footer">
 			<div data-role="navbar" data-theme="b">
 					<ul>
-						<li><a id="nav-projects" data-icon-pos="left" data-icon="custom" data-corners="false" data-icon-shadow="true" data-theme="b" href="index.index.html">Projects</a></li>
-						<li><a id="nav-members" data-icon-pos="left" data-icon="custom" data-corners="false" data-icon-shadow="true" data-theme="b" href="index.index.html">Members</a></li>
+						<li><a id="nav-projects" data-icon-pos="left" data-icon="custom" data-corners="false" data-icon-shadow="true" data-theme="b" href="index.html" class="ui-btn-active">Projects</a></li>
+						<li><a id="nav-members" data-icon-pos="left" data-icon="custom" data-corners="false" data-icon-shadow="true" data-theme="b" href="memberList.html">Members</a></li>
 
 					</ul>
 				</div>
