--- a/www/projectdetails.html
+++ b/www/projectdetails.html
@@ -13,7 +13,7 @@
 
   <div data-role="content" style="margin:0;padding:0;"> 
 
-  	<div style="min-height:200px"><img style="margin:0px;margin-top:0px;margin-bottom:10px;" id="projectPic" src="img/loading.gif"/></div>
+  	<div style="min-height:200px"><img style="margin:0px;margin-top:0px;margin-bottom:10px;" id="projectPic" src="img/loader.gif"/></div>
 	<div id="projectDetails" style="background:white;padding:0;padding-left:10px;padding-right:5px">
 		<div style="min-height:60px">
 			<div style="margin-top:0;width:300px"><h4 style="margin-bottom:0;margin-top:0" id="name"></h4>
