--- a/www/index.html
+++ b/www/index.html
@@ -40,9 +40,9 @@
         
 <div id="projectListPage" data-role="page" >
 
-	<div data-role="header" data-position="fixed" data-theme="a" style="background:lightslategray">
+	<div data-role="header" data-position="fixed" data-theme="a">
 		<img src="img/leaf.png" class="ui-btn-left" style="padding-top:3px">
-		<h1 style="color:#eee;font-weight:normal;text-shadow:none">Projects</h1>
+		<h1>Projects</h1>
 	</div>
 
 	<div data-role="content">
