--- a/www/projectdetails.html
+++ b/www/projectdetails.html
@@ -8,6 +8,7 @@
 <div id="detailsPage" data-role="page" data-add-back-btn="true" style="background:white">
 
 	<div data-role="header">
+		<img src="img/usgbc.png" class="ui-btn-right .shadowed" style="padding-top:3px">		
 		<h1>Project Details</h1>
 	</div>
 
